// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`line works 1`] = `
Schema {
  "$id": 3,
  "_indexes": Array [],
  "_userProvidedOptions": Object {},
  "aliases": Object {},
  "callQueue": Array [],
  "childSchemas": Array [],
  "inherits": Object {},
  "methodOptions": Object {},
  "methods": Object {},
  "nested": Object {},
  "obj": Object {
    "coordinates": Object {
      "required": true,
      "type": Array [
        Array [
          [Function],
        ],
      ],
      "validate": [Function],
    },
    "type": Object {
      "default": "LineString",
      "enum": Array [
        "LineString",
      ],
      "required": true,
      "type": [Function],
    },
  },
  "options": Object {
    "_id": true,
    "autoIndex": null,
    "bufferCommands": true,
    "capped": false,
    "discriminatorKey": "__t",
    "id": true,
    "minimize": true,
    "noId": false,
    "noVirtualId": false,
    "read": null,
    "shardKey": null,
    "strict": true,
    "typeKey": "type",
    "validateBeforeSave": true,
    "versionKey": "__v",
  },
  "paths": Object {
    "_id": ObjectId {
      "_index": null,
      "defaultValue": [Function],
      "getters": Array [],
      "instance": "ObjectID",
      "options": Object {
        "auto": true,
        "type": [Function],
      },
      "path": "_id",
      "setters": Array [
        [Function],
      ],
      "validators": Array [],
      Symbol(mongoose#schemaType): true,
    },
    "coordinates": SchemaArray {
      "$isMongooseArray": true,
      "_index": null,
      "caster": SchemaArray {
        "$isMongooseArray": true,
        "_index": null,
        "caster": SchemaNumber {
          "_index": null,
          "getters": Array [],
          "instance": "Number",
          "options": Object {},
          "path": "coordinates",
          "setters": Array [],
          "validators": Array [],
          Symbol(mongoose#schemaType): true,
        },
        "casterConstructor": [Function],
        "defaultValue": [Function],
        "getters": Array [],
        "instance": "Array",
        "options": Object {
          "type": Array [
            [Function],
          ],
        },
        "path": "coordinates",
        "schemaOptions": Object {
          "_id": true,
          "autoIndex": null,
          "bufferCommands": true,
          "capped": false,
          "discriminatorKey": "__t",
          "id": true,
          "minimize": true,
          "noId": false,
          "noVirtualId": false,
          "read": null,
          "shardKey": null,
          "strict": true,
          "typeKey": "type",
          "validateBeforeSave": true,
          "versionKey": "__v",
        },
        "setters": Array [],
        "validators": Array [],
        Symbol(mongoose#schemaType): true,
      },
      "casterConstructor": SchemaArray {
        "$isMongooseArray": true,
        "_index": null,
        "caster": SchemaNumber {
          "_index": null,
          "getters": Array [],
          "instance": "Number",
          "options": Object {},
          "path": "coordinates",
          "setters": Array [],
          "validators": Array [],
          Symbol(mongoose#schemaType): true,
        },
        "casterConstructor": [Function],
        "defaultValue": [Function],
        "getters": Array [],
        "instance": "Array",
        "options": Object {
          "type": Array [
            [Function],
          ],
        },
        "path": "coordinates",
        "schemaOptions": Object {
          "_id": true,
          "autoIndex": null,
          "bufferCommands": true,
          "capped": false,
          "discriminatorKey": "__t",
          "id": true,
          "minimize": true,
          "noId": false,
          "noVirtualId": false,
          "read": null,
          "shardKey": null,
          "strict": true,
          "typeKey": "type",
          "validateBeforeSave": true,
          "versionKey": "__v",
        },
        "setters": Array [],
        "validators": Array [],
        Symbol(mongoose#schemaType): true,
      },
      "defaultValue": [Function],
      "getters": Array [],
      "instance": "Array",
      "isRequired": true,
      "options": Object {
        "required": true,
        "type": Array [
          Array [
            [Function],
          ],
        ],
        "validate": [Function],
      },
      "originalRequiredValue": true,
      "path": "coordinates",
      "requiredValidator": [Function],
      "schemaOptions": undefined,
      "setters": Array [],
      "validators": Array [
        Object {
          "message": "Path \`{PATH}\` is required.",
          "type": "required",
          "validator": [Function],
        },
        Object {
          "message": "Validator failed for path \`{PATH}\` with value \`{VALUE}\`",
          "type": "user defined",
          "validator": [Function],
        },
      ],
      Symbol(mongoose#schemaType): true,
    },
    "type": SchemaString {
      "_index": null,
      "defaultValue": "LineString",
      "enumValidator": [Function],
      "enumValues": Array [
        "LineString",
      ],
      "getters": Array [],
      "instance": "String",
      "isRequired": true,
      "options": Object {
        "default": "LineString",
        "enum": Array [
          "LineString",
        ],
        "required": true,
        "type": [Function],
      },
      "originalRequiredValue": true,
      "path": "type",
      "regExp": null,
      "requiredValidator": [Function],
      "setters": Array [],
      "validators": Array [
        Object {
          "message": "Path \`{PATH}\` is required.",
          "type": "required",
          "validator": [Function],
        },
        Object {
          "enumValues": Array [
            "LineString",
          ],
          "message": "\`{VALUE}\` is not a valid enum value for path \`{PATH}\`.",
          "type": "enum",
          "validator": [Function],
        },
      ],
      Symbol(mongoose#schemaType): true,
    },
  },
  "plugins": Array [],
  "query": Object {},
  "s": Object {
    "hooks": Kareem {
      "_posts": Map {},
      "_pres": Map {},
    },
  },
  "singleNestedPaths": Object {},
  "statics": Object {},
  "subpaths": Object {
    "coordinates.$": SchemaArray {
      "$isMongooseArray": true,
      "_index": null,
      "caster": SchemaNumber {
        "_index": null,
        "getters": Array [],
        "instance": "Number",
        "options": Object {},
        "path": "coordinates",
        "setters": Array [],
        "validators": Array [],
        Symbol(mongoose#schemaType): true,
      },
      "casterConstructor": SchemaNumber {
        "_index": null,
        "getters": Array [],
        "instance": "Number",
        "options": Object {},
        "path": "coordinates",
        "setters": Array [],
        "validators": Array [],
        Symbol(mongoose#schemaType): true,
      },
      "defaultValue": [Function],
      "getters": Array [],
      "instance": "Array",
      "options": Object {
        "type": Array [
          [Function],
        ],
      },
      "path": "coordinates.$",
      "schemaOptions": Object {
        "_id": true,
        "autoIndex": null,
        "bufferCommands": true,
        "capped": false,
        "discriminatorKey": "__t",
        "id": true,
        "minimize": true,
        "noId": false,
        "noVirtualId": false,
        "read": null,
        "shardKey": null,
        "strict": true,
        "typeKey": "type",
        "validateBeforeSave": true,
        "versionKey": "__v",
      },
      "setters": Array [],
      "validators": Array [],
      Symbol(mongoose#schemaType): true,
    },
    "coordinates.$.$": SchemaNumber {
      "_index": null,
      "getters": Array [],
      "instance": "Number",
      "options": Object {},
      "path": "coordinates.$.$",
      "requiredValidator": undefined,
      "setters": Array [],
      "validators": Array [],
      Symbol(mongoose#schemaType): true,
    },
  },
  "tree": Object {
    "_id": Object {
      "auto": true,
      "type": [Function],
    },
    "coordinates": Object {
      "required": true,
      "type": Array [
        Array [
          [Function],
        ],
      ],
      "validate": [Function],
    },
    "type": Object {
      "default": "LineString",
      "enum": Array [
        "LineString",
      ],
      "required": true,
      "type": [Function],
    },
  },
  "virtuals": Object {},
}
`;

exports[`multiLine works 1`] = `
Schema {
  "$id": 4,
  "_indexes": Array [],
  "_userProvidedOptions": Object {},
  "aliases": Object {},
  "callQueue": Array [],
  "childSchemas": Array [],
  "inherits": Object {},
  "methodOptions": Object {},
  "methods": Object {},
  "nested": Object {},
  "obj": Object {
    "coordinates": Object {
      "required": true,
      "type": Array [
        Array [
          Array [
            [Function],
          ],
        ],
      ],
      "validate": [Function],
    },
    "type": Object {
      "default": "MultiLineString",
      "enum": Array [
        "MultiLineString",
      ],
      "required": true,
      "type": [Function],
    },
  },
  "options": Object {
    "_id": true,
    "autoIndex": null,
    "bufferCommands": true,
    "capped": false,
    "discriminatorKey": "__t",
    "id": true,
    "minimize": true,
    "noId": false,
    "noVirtualId": false,
    "read": null,
    "shardKey": null,
    "strict": true,
    "typeKey": "type",
    "validateBeforeSave": true,
    "versionKey": "__v",
  },
  "paths": Object {
    "_id": ObjectId {
      "_index": null,
      "defaultValue": [Function],
      "getters": Array [],
      "instance": "ObjectID",
      "options": Object {
        "auto": true,
        "type": [Function],
      },
      "path": "_id",
      "setters": Array [
        [Function],
      ],
      "validators": Array [],
      Symbol(mongoose#schemaType): true,
    },
    "coordinates": SchemaArray {
      "$isMongooseArray": true,
      "_index": null,
      "caster": SchemaArray {
        "$isMongooseArray": true,
        "_index": null,
        "caster": SchemaArray {
          "$isMongooseArray": true,
          "_index": null,
          "caster": SchemaNumber {
            "_index": null,
            "getters": Array [],
            "instance": "Number",
            "options": Object {},
            "path": "coordinates",
            "setters": Array [],
            "validators": Array [],
            Symbol(mongoose#schemaType): true,
          },
          "casterConstructor": [Function],
          "defaultValue": [Function],
          "getters": Array [],
          "instance": "Array",
          "options": Object {
            "type": Array [
              [Function],
            ],
          },
          "path": "coordinates",
          "schemaOptions": Object {
            "_id": true,
            "autoIndex": null,
            "bufferCommands": true,
            "capped": false,
            "discriminatorKey": "__t",
            "id": true,
            "minimize": true,
            "noId": false,
            "noVirtualId": false,
            "read": null,
            "shardKey": null,
            "strict": true,
            "typeKey": "type",
            "validateBeforeSave": true,
            "versionKey": "__v",
          },
          "setters": Array [],
          "validators": Array [],
          Symbol(mongoose#schemaType): true,
        },
        "casterConstructor": SchemaArray {
          "$isMongooseArray": true,
          "_index": null,
          "caster": SchemaNumber {
            "_index": null,
            "getters": Array [],
            "instance": "Number",
            "options": Object {},
            "path": "coordinates",
            "setters": Array [],
            "validators": Array [],
            Symbol(mongoose#schemaType): true,
          },
          "casterConstructor": [Function],
          "defaultValue": [Function],
          "getters": Array [],
          "instance": "Array",
          "options": Object {
            "type": Array [
              [Function],
            ],
          },
          "path": "coordinates",
          "schemaOptions": Object {
            "_id": true,
            "autoIndex": null,
            "bufferCommands": true,
            "capped": false,
            "discriminatorKey": "__t",
            "id": true,
            "minimize": true,
            "noId": false,
            "noVirtualId": false,
            "read": null,
            "shardKey": null,
            "strict": true,
            "typeKey": "type",
            "validateBeforeSave": true,
            "versionKey": "__v",
          },
          "setters": Array [],
          "validators": Array [],
          Symbol(mongoose#schemaType): true,
        },
        "defaultValue": [Function],
        "getters": Array [],
        "instance": "Array",
        "options": Object {
          "type": Array [
            Array [
              [Function],
            ],
          ],
        },
        "path": "coordinates",
        "schemaOptions": undefined,
        "setters": Array [],
        "validators": Array [],
        Symbol(mongoose#schemaType): true,
      },
      "casterConstructor": SchemaArray {
        "$isMongooseArray": true,
        "_index": null,
        "caster": SchemaArray {
          "$isMongooseArray": true,
          "_index": null,
          "caster": SchemaNumber {
            "_index": null,
            "getters": Array [],
            "instance": "Number",
            "options": Object {},
            "path": "coordinates",
            "setters": Array [],
            "validators": Array [],
            Symbol(mongoose#schemaType): true,
          },
          "casterConstructor": [Function],
          "defaultValue": [Function],
          "getters": Array [],
          "instance": "Array",
          "options": Object {
            "type": Array [
              [Function],
            ],
          },
          "path": "coordinates",
          "schemaOptions": Object {
            "_id": true,
            "autoIndex": null,
            "bufferCommands": true,
            "capped": false,
            "discriminatorKey": "__t",
            "id": true,
            "minimize": true,
            "noId": false,
            "noVirtualId": false,
            "read": null,
            "shardKey": null,
            "strict": true,
            "typeKey": "type",
            "validateBeforeSave": true,
            "versionKey": "__v",
          },
          "setters": Array [],
          "validators": Array [],
          Symbol(mongoose#schemaType): true,
        },
        "casterConstructor": SchemaArray {
          "$isMongooseArray": true,
          "_index": null,
          "caster": SchemaNumber {
            "_index": null,
            "getters": Array [],
            "instance": "Number",
            "options": Object {},
            "path": "coordinates",
            "setters": Array [],
            "validators": Array [],
            Symbol(mongoose#schemaType): true,
          },
          "casterConstructor": [Function],
          "defaultValue": [Function],
          "getters": Array [],
          "instance": "Array",
          "options": Object {
            "type": Array [
              [Function],
            ],
          },
          "path": "coordinates",
          "schemaOptions": Object {
            "_id": true,
            "autoIndex": null,
            "bufferCommands": true,
            "capped": false,
            "discriminatorKey": "__t",
            "id": true,
            "minimize": true,
            "noId": false,
            "noVirtualId": false,
            "read": null,
            "shardKey": null,
            "strict": true,
            "typeKey": "type",
            "validateBeforeSave": true,
            "versionKey": "__v",
          },
          "setters": Array [],
          "validators": Array [],
          Symbol(mongoose#schemaType): true,
        },
        "defaultValue": [Function],
        "getters": Array [],
        "instance": "Array",
        "options": Object {
          "type": Array [
            Array [
              [Function],
            ],
          ],
        },
        "path": "coordinates",
        "schemaOptions": undefined,
        "setters": Array [],
        "validators": Array [],
        Symbol(mongoose#schemaType): true,
      },
      "defaultValue": [Function],
      "getters": Array [],
      "instance": "Array",
      "isRequired": true,
      "options": Object {
        "required": true,
        "type": Array [
          Array [
            Array [
              [Function],
            ],
          ],
        ],
        "validate": [Function],
      },
      "originalRequiredValue": true,
      "path": "coordinates",
      "requiredValidator": [Function],
      "schemaOptions": undefined,
      "setters": Array [],
      "validators": Array [
        Object {
          "message": "Path \`{PATH}\` is required.",
          "type": "required",
          "validator": [Function],
        },
        Object {
          "message": "Validator failed for path \`{PATH}\` with value \`{VALUE}\`",
          "type": "user defined",
          "validator": [Function],
        },
      ],
      Symbol(mongoose#schemaType): true,
    },
    "type": SchemaString {
      "_index": null,
      "defaultValue": "MultiLineString",
      "enumValidator": [Function],
      "enumValues": Array [
        "MultiLineString",
      ],
      "getters": Array [],
      "instance": "String",
      "isRequired": true,
      "options": Object {
        "default": "MultiLineString",
        "enum": Array [
          "MultiLineString",
        ],
        "required": true,
        "type": [Function],
      },
      "originalRequiredValue": true,
      "path": "type",
      "regExp": null,
      "requiredValidator": [Function],
      "setters": Array [],
      "validators": Array [
        Object {
          "message": "Path \`{PATH}\` is required.",
          "type": "required",
          "validator": [Function],
        },
        Object {
          "enumValues": Array [
            "MultiLineString",
          ],
          "message": "\`{VALUE}\` is not a valid enum value for path \`{PATH}\`.",
          "type": "enum",
          "validator": [Function],
        },
      ],
      Symbol(mongoose#schemaType): true,
    },
  },
  "plugins": Array [],
  "query": Object {},
  "s": Object {
    "hooks": Kareem {
      "_posts": Map {},
      "_pres": Map {},
    },
  },
  "singleNestedPaths": Object {},
  "statics": Object {},
  "subpaths": Object {
    "coordinates.$": SchemaArray {
      "$isMongooseArray": true,
      "_index": null,
      "caster": SchemaArray {
        "$isMongooseArray": true,
        "_index": null,
        "caster": SchemaNumber {
          "_index": null,
          "getters": Array [],
          "instance": "Number",
          "options": Object {},
          "path": "coordinates",
          "setters": Array [],
          "validators": Array [],
          Symbol(mongoose#schemaType): true,
        },
        "casterConstructor": [Function],
        "defaultValue": [Function],
        "getters": Array [],
        "instance": "Array",
        "options": Object {
          "type": Array [
            [Function],
          ],
        },
        "path": "coordinates",
        "schemaOptions": Object {
          "_id": true,
          "autoIndex": null,
          "bufferCommands": true,
          "capped": false,
          "discriminatorKey": "__t",
          "id": true,
          "minimize": true,
          "noId": false,
          "noVirtualId": false,
          "read": null,
          "shardKey": null,
          "strict": true,
          "typeKey": "type",
          "validateBeforeSave": true,
          "versionKey": "__v",
        },
        "setters": Array [],
        "validators": Array [],
        Symbol(mongoose#schemaType): true,
      },
      "casterConstructor": SchemaArray {
        "$isMongooseArray": true,
        "_index": null,
        "caster": SchemaNumber {
          "_index": null,
          "getters": Array [],
          "instance": "Number",
          "options": Object {},
          "path": "coordinates",
          "setters": Array [],
          "validators": Array [],
          Symbol(mongoose#schemaType): true,
        },
        "casterConstructor": [Function],
        "defaultValue": [Function],
        "getters": Array [],
        "instance": "Array",
        "options": Object {
          "type": Array [
            [Function],
          ],
        },
        "path": "coordinates",
        "schemaOptions": Object {
          "_id": true,
          "autoIndex": null,
          "bufferCommands": true,
          "capped": false,
          "discriminatorKey": "__t",
          "id": true,
          "minimize": true,
          "noId": false,
          "noVirtualId": false,
          "read": null,
          "shardKey": null,
          "strict": true,
          "typeKey": "type",
          "validateBeforeSave": true,
          "versionKey": "__v",
        },
        "setters": Array [],
        "validators": Array [],
        Symbol(mongoose#schemaType): true,
      },
      "defaultValue": [Function],
      "getters": Array [],
      "instance": "Array",
      "options": Object {
        "type": Array [
          Array [
            [Function],
          ],
        ],
      },
      "path": "coordinates.$",
      "schemaOptions": undefined,
      "setters": Array [],
      "validators": Array [],
      Symbol(mongoose#schemaType): true,
    },
    "coordinates.$.$": SchemaArray {
      "$isMongooseArray": true,
      "_index": null,
      "caster": SchemaNumber {
        "_index": null,
        "getters": Array [],
        "instance": "Number",
        "options": Object {},
        "path": "coordinates",
        "setters": Array [],
        "validators": Array [],
        Symbol(mongoose#schemaType): true,
      },
      "casterConstructor": SchemaNumber {
        "_index": null,
        "getters": Array [],
        "instance": "Number",
        "options": Object {},
        "path": "coordinates",
        "setters": Array [],
        "validators": Array [],
        Symbol(mongoose#schemaType): true,
      },
      "defaultValue": [Function],
      "getters": Array [],
      "instance": "Array",
      "options": Object {
        "type": Array [
          [Function],
        ],
      },
      "path": "coordinates.$.$",
      "schemaOptions": Object {
        "_id": true,
        "autoIndex": null,
        "bufferCommands": true,
        "capped": false,
        "discriminatorKey": "__t",
        "id": true,
        "minimize": true,
        "noId": false,
        "noVirtualId": false,
        "read": null,
        "shardKey": null,
        "strict": true,
        "typeKey": "type",
        "validateBeforeSave": true,
        "versionKey": "__v",
      },
      "setters": Array [],
      "validators": Array [],
      Symbol(mongoose#schemaType): true,
    },
    "coordinates.$.$.$": SchemaNumber {
      "_index": null,
      "getters": Array [],
      "instance": "Number",
      "options": Object {},
      "path": "coordinates.$.$.$",
      "requiredValidator": undefined,
      "setters": Array [],
      "validators": Array [],
      Symbol(mongoose#schemaType): true,
    },
  },
  "tree": Object {
    "_id": Object {
      "auto": true,
      "type": [Function],
    },
    "coordinates": Object {
      "required": true,
      "type": Array [
        Array [
          Array [
            [Function],
          ],
        ],
      ],
      "validate": [Function],
    },
    "type": Object {
      "default": "MultiLineString",
      "enum": Array [
        "MultiLineString",
      ],
      "required": true,
      "type": [Function],
    },
  },
  "virtuals": Object {},
}
`;

exports[`multiPoint works 1`] = `
Schema {
  "$id": 2,
  "_indexes": Array [],
  "_userProvidedOptions": Object {},
  "aliases": Object {},
  "callQueue": Array [],
  "childSchemas": Array [],
  "inherits": Object {},
  "methodOptions": Object {},
  "methods": Object {},
  "nested": Object {},
  "obj": Object {
    "coordinates": Object {
      "required": true,
      "type": Array [
        Array [
          [Function],
        ],
      ],
      "validate": [Function],
    },
    "type": Object {
      "default": "MultiPoint",
      "enum": Array [
        "MultiPoint",
      ],
      "required": true,
      "type": [Function],
    },
  },
  "options": Object {
    "_id": true,
    "autoIndex": null,
    "bufferCommands": true,
    "capped": false,
    "discriminatorKey": "__t",
    "id": true,
    "minimize": true,
    "noId": false,
    "noVirtualId": false,
    "read": null,
    "shardKey": null,
    "strict": true,
    "typeKey": "type",
    "validateBeforeSave": true,
    "versionKey": "__v",
  },
  "paths": Object {
    "_id": ObjectId {
      "_index": null,
      "defaultValue": [Function],
      "getters": Array [],
      "instance": "ObjectID",
      "options": Object {
        "auto": true,
        "type": [Function],
      },
      "path": "_id",
      "setters": Array [
        [Function],
      ],
      "validators": Array [],
      Symbol(mongoose#schemaType): true,
    },
    "coordinates": SchemaArray {
      "$isMongooseArray": true,
      "_index": null,
      "caster": SchemaArray {
        "$isMongooseArray": true,
        "_index": null,
        "caster": SchemaNumber {
          "_index": null,
          "getters": Array [],
          "instance": "Number",
          "options": Object {},
          "path": "coordinates",
          "setters": Array [],
          "validators": Array [],
          Symbol(mongoose#schemaType): true,
        },
        "casterConstructor": [Function],
        "defaultValue": [Function],
        "getters": Array [],
        "instance": "Array",
        "options": Object {
          "type": Array [
            [Function],
          ],
        },
        "path": "coordinates",
        "schemaOptions": Object {
          "_id": true,
          "autoIndex": null,
          "bufferCommands": true,
          "capped": false,
          "discriminatorKey": "__t",
          "id": true,
          "minimize": true,
          "noId": false,
          "noVirtualId": false,
          "read": null,
          "shardKey": null,
          "strict": true,
          "typeKey": "type",
          "validateBeforeSave": true,
          "versionKey": "__v",
        },
        "setters": Array [],
        "validators": Array [],
        Symbol(mongoose#schemaType): true,
      },
      "casterConstructor": SchemaArray {
        "$isMongooseArray": true,
        "_index": null,
        "caster": SchemaNumber {
          "_index": null,
          "getters": Array [],
          "instance": "Number",
          "options": Object {},
          "path": "coordinates",
          "setters": Array [],
          "validators": Array [],
          Symbol(mongoose#schemaType): true,
        },
        "casterConstructor": [Function],
        "defaultValue": [Function],
        "getters": Array [],
        "instance": "Array",
        "options": Object {
          "type": Array [
            [Function],
          ],
        },
        "path": "coordinates",
        "schemaOptions": Object {
          "_id": true,
          "autoIndex": null,
          "bufferCommands": true,
          "capped": false,
          "discriminatorKey": "__t",
          "id": true,
          "minimize": true,
          "noId": false,
          "noVirtualId": false,
          "read": null,
          "shardKey": null,
          "strict": true,
          "typeKey": "type",
          "validateBeforeSave": true,
          "versionKey": "__v",
        },
        "setters": Array [],
        "validators": Array [],
        Symbol(mongoose#schemaType): true,
      },
      "defaultValue": [Function],
      "getters": Array [],
      "instance": "Array",
      "isRequired": true,
      "options": Object {
        "required": true,
        "type": Array [
          Array [
            [Function],
          ],
        ],
        "validate": [Function],
      },
      "originalRequiredValue": true,
      "path": "coordinates",
      "requiredValidator": [Function],
      "schemaOptions": undefined,
      "setters": Array [],
      "validators": Array [
        Object {
          "message": "Path \`{PATH}\` is required.",
          "type": "required",
          "validator": [Function],
        },
        Object {
          "message": "Validator failed for path \`{PATH}\` with value \`{VALUE}\`",
          "type": "user defined",
          "validator": [Function],
        },
      ],
      Symbol(mongoose#schemaType): true,
    },
    "type": SchemaString {
      "_index": null,
      "defaultValue": "MultiPoint",
      "enumValidator": [Function],
      "enumValues": Array [
        "MultiPoint",
      ],
      "getters": Array [],
      "instance": "String",
      "isRequired": true,
      "options": Object {
        "default": "MultiPoint",
        "enum": Array [
          "MultiPoint",
        ],
        "required": true,
        "type": [Function],
      },
      "originalRequiredValue": true,
      "path": "type",
      "regExp": null,
      "requiredValidator": [Function],
      "setters": Array [],
      "validators": Array [
        Object {
          "message": "Path \`{PATH}\` is required.",
          "type": "required",
          "validator": [Function],
        },
        Object {
          "enumValues": Array [
            "MultiPoint",
          ],
          "message": "\`{VALUE}\` is not a valid enum value for path \`{PATH}\`.",
          "type": "enum",
          "validator": [Function],
        },
      ],
      Symbol(mongoose#schemaType): true,
    },
  },
  "plugins": Array [],
  "query": Object {},
  "s": Object {
    "hooks": Kareem {
      "_posts": Map {},
      "_pres": Map {},
    },
  },
  "singleNestedPaths": Object {},
  "statics": Object {},
  "subpaths": Object {
    "coordinates.$": SchemaArray {
      "$isMongooseArray": true,
      "_index": null,
      "caster": SchemaNumber {
        "_index": null,
        "getters": Array [],
        "instance": "Number",
        "options": Object {},
        "path": "coordinates",
        "setters": Array [],
        "validators": Array [],
        Symbol(mongoose#schemaType): true,
      },
      "casterConstructor": SchemaNumber {
        "_index": null,
        "getters": Array [],
        "instance": "Number",
        "options": Object {},
        "path": "coordinates",
        "setters": Array [],
        "validators": Array [],
        Symbol(mongoose#schemaType): true,
      },
      "defaultValue": [Function],
      "getters": Array [],
      "instance": "Array",
      "options": Object {
        "type": Array [
          [Function],
        ],
      },
      "path": "coordinates.$",
      "schemaOptions": Object {
        "_id": true,
        "autoIndex": null,
        "bufferCommands": true,
        "capped": false,
        "discriminatorKey": "__t",
        "id": true,
        "minimize": true,
        "noId": false,
        "noVirtualId": false,
        "read": null,
        "shardKey": null,
        "strict": true,
        "typeKey": "type",
        "validateBeforeSave": true,
        "versionKey": "__v",
      },
      "setters": Array [],
      "validators": Array [],
      Symbol(mongoose#schemaType): true,
    },
    "coordinates.$.$": SchemaNumber {
      "_index": null,
      "getters": Array [],
      "instance": "Number",
      "options": Object {},
      "path": "coordinates.$.$",
      "requiredValidator": undefined,
      "setters": Array [],
      "validators": Array [],
      Symbol(mongoose#schemaType): true,
    },
  },
  "tree": Object {
    "_id": Object {
      "auto": true,
      "type": [Function],
    },
    "coordinates": Object {
      "required": true,
      "type": Array [
        Array [
          [Function],
        ],
      ],
      "validate": [Function],
    },
    "type": Object {
      "default": "MultiPoint",
      "enum": Array [
        "MultiPoint",
      ],
      "required": true,
      "type": [Function],
    },
  },
  "virtuals": Object {},
}
`;

exports[`multiPolygon works 1`] = `
Schema {
  "$id": 6,
  "_indexes": Array [],
  "_userProvidedOptions": Object {},
  "aliases": Object {},
  "callQueue": Array [],
  "childSchemas": Array [],
  "inherits": Object {},
  "methodOptions": Object {},
  "methods": Object {},
  "nested": Object {},
  "obj": Object {
    "coordinates": Object {
      "required": true,
      "type": Array [
        Array [
          Array [
            Array [
              [Function],
            ],
          ],
        ],
      ],
      "validate": [Function],
    },
    "type": Object {
      "default": "MultiPolygon",
      "enum": Array [
        "MultiPolygon",
      ],
      "required": true,
      "type": [Function],
    },
  },
  "options": Object {
    "_id": true,
    "autoIndex": null,
    "bufferCommands": true,
    "capped": false,
    "discriminatorKey": "__t",
    "id": true,
    "minimize": true,
    "noId": false,
    "noVirtualId": false,
    "read": null,
    "shardKey": null,
    "strict": true,
    "typeKey": "type",
    "validateBeforeSave": true,
    "versionKey": "__v",
  },
  "paths": Object {
    "_id": ObjectId {
      "_index": null,
      "defaultValue": [Function],
      "getters": Array [],
      "instance": "ObjectID",
      "options": Object {
        "auto": true,
        "type": [Function],
      },
      "path": "_id",
      "setters": Array [
        [Function],
      ],
      "validators": Array [],
      Symbol(mongoose#schemaType): true,
    },
    "coordinates": SchemaArray {
      "$isMongooseArray": true,
      "_index": null,
      "caster": SchemaArray {
        "$isMongooseArray": true,
        "_index": null,
        "caster": SchemaArray {
          "$isMongooseArray": true,
          "_index": null,
          "caster": SchemaArray {
            "$isMongooseArray": true,
            "_index": null,
            "caster": SchemaNumber {
              "_index": null,
              "getters": Array [],
              "instance": "Number",
              "options": Object {},
              "path": "coordinates",
              "setters": Array [],
              "validators": Array [],
              Symbol(mongoose#schemaType): true,
            },
            "casterConstructor": [Function],
            "defaultValue": [Function],
            "getters": Array [],
            "instance": "Array",
            "options": Object {
              "type": Array [
                [Function],
              ],
            },
            "path": "coordinates",
            "schemaOptions": Object {
              "_id": true,
              "autoIndex": null,
              "bufferCommands": true,
              "capped": false,
              "discriminatorKey": "__t",
              "id": true,
              "minimize": true,
              "noId": false,
              "noVirtualId": false,
              "read": null,
              "shardKey": null,
              "strict": true,
              "typeKey": "type",
              "validateBeforeSave": true,
              "versionKey": "__v",
            },
            "setters": Array [],
            "validators": Array [],
            Symbol(mongoose#schemaType): true,
          },
          "casterConstructor": SchemaArray {
            "$isMongooseArray": true,
            "_index": null,
            "caster": SchemaNumber {
              "_index": null,
              "getters": Array [],
              "instance": "Number",
              "options": Object {},
              "path": "coordinates",
              "setters": Array [],
              "validators": Array [],
              Symbol(mongoose#schemaType): true,
            },
            "casterConstructor": [Function],
            "defaultValue": [Function],
            "getters": Array [],
            "instance": "Array",
            "options": Object {
              "type": Array [
                [Function],
              ],
            },
            "path": "coordinates",
            "schemaOptions": Object {
              "_id": true,
              "autoIndex": null,
              "bufferCommands": true,
              "capped": false,
              "discriminatorKey": "__t",
              "id": true,
              "minimize": true,
              "noId": false,
              "noVirtualId": false,
              "read": null,
              "shardKey": null,
              "strict": true,
              "typeKey": "type",
              "validateBeforeSave": true,
              "versionKey": "__v",
            },
            "setters": Array [],
            "validators": Array [],
            Symbol(mongoose#schemaType): true,
          },
          "defaultValue": [Function],
          "getters": Array [],
          "instance": "Array",
          "options": Object {
            "type": Array [
              Array [
                [Function],
              ],
            ],
          },
          "path": "coordinates",
          "schemaOptions": undefined,
          "setters": Array [],
          "validators": Array [],
          Symbol(mongoose#schemaType): true,
        },
        "casterConstructor": SchemaArray {
          "$isMongooseArray": true,
          "_index": null,
          "caster": SchemaArray {
            "$isMongooseArray": true,
            "_index": null,
            "caster": SchemaNumber {
              "_index": null,
              "getters": Array [],
              "instance": "Number",
              "options": Object {},
              "path": "coordinates",
              "setters": Array [],
              "validators": Array [],
              Symbol(mongoose#schemaType): true,
            },
            "casterConstructor": [Function],
            "defaultValue": [Function],
            "getters": Array [],
            "instance": "Array",
            "options": Object {
              "type": Array [
                [Function],
              ],
            },
            "path": "coordinates",
            "schemaOptions": Object {
              "_id": true,
              "autoIndex": null,
              "bufferCommands": true,
              "capped": false,
              "discriminatorKey": "__t",
              "id": true,
              "minimize": true,
              "noId": false,
              "noVirtualId": false,
              "read": null,
              "shardKey": null,
              "strict": true,
              "typeKey": "type",
              "validateBeforeSave": true,
              "versionKey": "__v",
            },
            "setters": Array [],
            "validators": Array [],
            Symbol(mongoose#schemaType): true,
          },
          "casterConstructor": SchemaArray {
            "$isMongooseArray": true,
            "_index": null,
            "caster": SchemaNumber {
              "_index": null,
              "getters": Array [],
              "instance": "Number",
              "options": Object {},
              "path": "coordinates",
              "setters": Array [],
              "validators": Array [],
              Symbol(mongoose#schemaType): true,
            },
            "casterConstructor": [Function],
            "defaultValue": [Function],
            "getters": Array [],
            "instance": "Array",
            "options": Object {
              "type": Array [
                [Function],
              ],
            },
            "path": "coordinates",
            "schemaOptions": Object {
              "_id": true,
              "autoIndex": null,
              "bufferCommands": true,
              "capped": false,
              "discriminatorKey": "__t",
              "id": true,
              "minimize": true,
              "noId": false,
              "noVirtualId": false,
              "read": null,
              "shardKey": null,
              "strict": true,
              "typeKey": "type",
              "validateBeforeSave": true,
              "versionKey": "__v",
            },
            "setters": Array [],
            "validators": Array [],
            Symbol(mongoose#schemaType): true,
          },
          "defaultValue": [Function],
          "getters": Array [],
          "instance": "Array",
          "options": Object {
            "type": Array [
              Array [
                [Function],
              ],
            ],
          },
          "path": "coordinates",
          "schemaOptions": undefined,
          "setters": Array [],
          "validators": Array [],
          Symbol(mongoose#schemaType): true,
        },
        "defaultValue": [Function],
        "getters": Array [],
        "instance": "Array",
        "options": Object {
          "type": Array [
            Array [
              Array [
                [Function],
              ],
            ],
          ],
        },
        "path": "coordinates",
        "schemaOptions": undefined,
        "setters": Array [],
        "validators": Array [],
        Symbol(mongoose#schemaType): true,
      },
      "casterConstructor": SchemaArray {
        "$isMongooseArray": true,
        "_index": null,
        "caster": SchemaArray {
          "$isMongooseArray": true,
          "_index": null,
          "caster": SchemaArray {
            "$isMongooseArray": true,
            "_index": null,
            "caster": SchemaNumber {
              "_index": null,
              "getters": Array [],
              "instance": "Number",
              "options": Object {},
              "path": "coordinates",
              "setters": Array [],
              "validators": Array [],
              Symbol(mongoose#schemaType): true,
            },
            "casterConstructor": [Function],
            "defaultValue": [Function],
            "getters": Array [],
            "instance": "Array",
            "options": Object {
              "type": Array [
                [Function],
              ],
            },
            "path": "coordinates",
            "schemaOptions": Object {
              "_id": true,
              "autoIndex": null,
              "bufferCommands": true,
              "capped": false,
              "discriminatorKey": "__t",
              "id": true,
              "minimize": true,
              "noId": false,
              "noVirtualId": false,
              "read": null,
              "shardKey": null,
              "strict": true,
              "typeKey": "type",
              "validateBeforeSave": true,
              "versionKey": "__v",
            },
            "setters": Array [],
            "validators": Array [],
            Symbol(mongoose#schemaType): true,
          },
          "casterConstructor": SchemaArray {
            "$isMongooseArray": true,
            "_index": null,
            "caster": SchemaNumber {
              "_index": null,
              "getters": Array [],
              "instance": "Number",
              "options": Object {},
              "path": "coordinates",
              "setters": Array [],
              "validators": Array [],
              Symbol(mongoose#schemaType): true,
            },
            "casterConstructor": [Function],
            "defaultValue": [Function],
            "getters": Array [],
            "instance": "Array",
            "options": Object {
              "type": Array [
                [Function],
              ],
            },
            "path": "coordinates",
            "schemaOptions": Object {
              "_id": true,
              "autoIndex": null,
              "bufferCommands": true,
              "capped": false,
              "discriminatorKey": "__t",
              "id": true,
              "minimize": true,
              "noId": false,
              "noVirtualId": false,
              "read": null,
              "shardKey": null,
              "strict": true,
              "typeKey": "type",
              "validateBeforeSave": true,
              "versionKey": "__v",
            },
            "setters": Array [],
            "validators": Array [],
            Symbol(mongoose#schemaType): true,
          },
          "defaultValue": [Function],
          "getters": Array [],
          "instance": "Array",
          "options": Object {
            "type": Array [
              Array [
                [Function],
              ],
            ],
          },
          "path": "coordinates",
          "schemaOptions": undefined,
          "setters": Array [],
          "validators": Array [],
          Symbol(mongoose#schemaType): true,
        },
        "casterConstructor": SchemaArray {
          "$isMongooseArray": true,
          "_index": null,
          "caster": SchemaArray {
            "$isMongooseArray": true,
            "_index": null,
            "caster": SchemaNumber {
              "_index": null,
              "getters": Array [],
              "instance": "Number",
              "options": Object {},
              "path": "coordinates",
              "setters": Array [],
              "validators": Array [],
              Symbol(mongoose#schemaType): true,
            },
            "casterConstructor": [Function],
            "defaultValue": [Function],
            "getters": Array [],
            "instance": "Array",
            "options": Object {
              "type": Array [
                [Function],
              ],
            },
            "path": "coordinates",
            "schemaOptions": Object {
              "_id": true,
              "autoIndex": null,
              "bufferCommands": true,
              "capped": false,
              "discriminatorKey": "__t",
              "id": true,
              "minimize": true,
              "noId": false,
              "noVirtualId": false,
              "read": null,
              "shardKey": null,
              "strict": true,
              "typeKey": "type",
              "validateBeforeSave": true,
              "versionKey": "__v",
            },
            "setters": Array [],
            "validators": Array [],
            Symbol(mongoose#schemaType): true,
          },
          "casterConstructor": SchemaArray {
            "$isMongooseArray": true,
            "_index": null,
            "caster": SchemaNumber {
              "_index": null,
              "getters": Array [],
              "instance": "Number",
              "options": Object {},
              "path": "coordinates",
              "setters": Array [],
              "validators": Array [],
              Symbol(mongoose#schemaType): true,
            },
            "casterConstructor": [Function],
            "defaultValue": [Function],
            "getters": Array [],
            "instance": "Array",
            "options": Object {
              "type": Array [
                [Function],
              ],
            },
            "path": "coordinates",
            "schemaOptions": Object {
              "_id": true,
              "autoIndex": null,
              "bufferCommands": true,
              "capped": false,
              "discriminatorKey": "__t",
              "id": true,
              "minimize": true,
              "noId": false,
              "noVirtualId": false,
              "read": null,
              "shardKey": null,
              "strict": true,
              "typeKey": "type",
              "validateBeforeSave": true,
              "versionKey": "__v",
            },
            "setters": Array [],
            "validators": Array [],
            Symbol(mongoose#schemaType): true,
          },
          "defaultValue": [Function],
          "getters": Array [],
          "instance": "Array",
          "options": Object {
            "type": Array [
              Array [
                [Function],
              ],
            ],
          },
          "path": "coordinates",
          "schemaOptions": undefined,
          "setters": Array [],
          "validators": Array [],
          Symbol(mongoose#schemaType): true,
        },
        "defaultValue": [Function],
        "getters": Array [],
        "instance": "Array",
        "options": Object {
          "type": Array [
            Array [
              Array [
                [Function],
              ],
            ],
          ],
        },
        "path": "coordinates",
        "schemaOptions": undefined,
        "setters": Array [],
        "validators": Array [],
        Symbol(mongoose#schemaType): true,
      },
      "defaultValue": [Function],
      "getters": Array [],
      "instance": "Array",
      "isRequired": true,
      "options": Object {
        "required": true,
        "type": Array [
          Array [
            Array [
              Array [
                [Function],
              ],
            ],
          ],
        ],
        "validate": [Function],
      },
      "originalRequiredValue": true,
      "path": "coordinates",
      "requiredValidator": [Function],
      "schemaOptions": undefined,
      "setters": Array [],
      "validators": Array [
        Object {
          "message": "Path \`{PATH}\` is required.",
          "type": "required",
          "validator": [Function],
        },
        Object {
          "message": "Validator failed for path \`{PATH}\` with value \`{VALUE}\`",
          "type": "user defined",
          "validator": [Function],
        },
      ],
      Symbol(mongoose#schemaType): true,
    },
    "type": SchemaString {
      "_index": null,
      "defaultValue": "MultiPolygon",
      "enumValidator": [Function],
      "enumValues": Array [
        "MultiPolygon",
      ],
      "getters": Array [],
      "instance": "String",
      "isRequired": true,
      "options": Object {
        "default": "MultiPolygon",
        "enum": Array [
          "MultiPolygon",
        ],
        "required": true,
        "type": [Function],
      },
      "originalRequiredValue": true,
      "path": "type",
      "regExp": null,
      "requiredValidator": [Function],
      "setters": Array [],
      "validators": Array [
        Object {
          "message": "Path \`{PATH}\` is required.",
          "type": "required",
          "validator": [Function],
        },
        Object {
          "enumValues": Array [
            "MultiPolygon",
          ],
          "message": "\`{VALUE}\` is not a valid enum value for path \`{PATH}\`.",
          "type": "enum",
          "validator": [Function],
        },
      ],
      Symbol(mongoose#schemaType): true,
    },
  },
  "plugins": Array [],
  "query": Object {},
  "s": Object {
    "hooks": Kareem {
      "_posts": Map {},
      "_pres": Map {},
    },
  },
  "singleNestedPaths": Object {},
  "statics": Object {},
  "subpaths": Object {
    "coordinates.$": SchemaArray {
      "$isMongooseArray": true,
      "_index": null,
      "caster": SchemaArray {
        "$isMongooseArray": true,
        "_index": null,
        "caster": SchemaArray {
          "$isMongooseArray": true,
          "_index": null,
          "caster": SchemaNumber {
            "_index": null,
            "getters": Array [],
            "instance": "Number",
            "options": Object {},
            "path": "coordinates",
            "setters": Array [],
            "validators": Array [],
            Symbol(mongoose#schemaType): true,
          },
          "casterConstructor": [Function],
          "defaultValue": [Function],
          "getters": Array [],
          "instance": "Array",
          "options": Object {
            "type": Array [
              [Function],
            ],
          },
          "path": "coordinates",
          "schemaOptions": Object {
            "_id": true,
            "autoIndex": null,
            "bufferCommands": true,
            "capped": false,
            "discriminatorKey": "__t",
            "id": true,
            "minimize": true,
            "noId": false,
            "noVirtualId": false,
            "read": null,
            "shardKey": null,
            "strict": true,
            "typeKey": "type",
            "validateBeforeSave": true,
            "versionKey": "__v",
          },
          "setters": Array [],
          "validators": Array [],
          Symbol(mongoose#schemaType): true,
        },
        "casterConstructor": SchemaArray {
          "$isMongooseArray": true,
          "_index": null,
          "caster": SchemaNumber {
            "_index": null,
            "getters": Array [],
            "instance": "Number",
            "options": Object {},
            "path": "coordinates",
            "setters": Array [],
            "validators": Array [],
            Symbol(mongoose#schemaType): true,
          },
          "casterConstructor": [Function],
          "defaultValue": [Function],
          "getters": Array [],
          "instance": "Array",
          "options": Object {
            "type": Array [
              [Function],
            ],
          },
          "path": "coordinates",
          "schemaOptions": Object {
            "_id": true,
            "autoIndex": null,
            "bufferCommands": true,
            "capped": false,
            "discriminatorKey": "__t",
            "id": true,
            "minimize": true,
            "noId": false,
            "noVirtualId": false,
            "read": null,
            "shardKey": null,
            "strict": true,
            "typeKey": "type",
            "validateBeforeSave": true,
            "versionKey": "__v",
          },
          "setters": Array [],
          "validators": Array [],
          Symbol(mongoose#schemaType): true,
        },
        "defaultValue": [Function],
        "getters": Array [],
        "instance": "Array",
        "options": Object {
          "type": Array [
            Array [
              [Function],
            ],
          ],
        },
        "path": "coordinates",
        "schemaOptions": undefined,
        "setters": Array [],
        "validators": Array [],
        Symbol(mongoose#schemaType): true,
      },
      "casterConstructor": SchemaArray {
        "$isMongooseArray": true,
        "_index": null,
        "caster": SchemaArray {
          "$isMongooseArray": true,
          "_index": null,
          "caster": SchemaNumber {
            "_index": null,
            "getters": Array [],
            "instance": "Number",
            "options": Object {},
            "path": "coordinates",
            "setters": Array [],
            "validators": Array [],
            Symbol(mongoose#schemaType): true,
          },
          "casterConstructor": [Function],
          "defaultValue": [Function],
          "getters": Array [],
          "instance": "Array",
          "options": Object {
            "type": Array [
              [Function],
            ],
          },
          "path": "coordinates",
          "schemaOptions": Object {
            "_id": true,
            "autoIndex": null,
            "bufferCommands": true,
            "capped": false,
            "discriminatorKey": "__t",
            "id": true,
            "minimize": true,
            "noId": false,
            "noVirtualId": false,
            "read": null,
            "shardKey": null,
            "strict": true,
            "typeKey": "type",
            "validateBeforeSave": true,
            "versionKey": "__v",
          },
          "setters": Array [],
          "validators": Array [],
          Symbol(mongoose#schemaType): true,
        },
        "casterConstructor": SchemaArray {
          "$isMongooseArray": true,
          "_index": null,
          "caster": SchemaNumber {
            "_index": null,
            "getters": Array [],
            "instance": "Number",
            "options": Object {},
            "path": "coordinates",
            "setters": Array [],
            "validators": Array [],
            Symbol(mongoose#schemaType): true,
          },
          "casterConstructor": [Function],
          "defaultValue": [Function],
          "getters": Array [],
          "instance": "Array",
          "options": Object {
            "type": Array [
              [Function],
            ],
          },
          "path": "coordinates",
          "schemaOptions": Object {
            "_id": true,
            "autoIndex": null,
            "bufferCommands": true,
            "capped": false,
            "discriminatorKey": "__t",
            "id": true,
            "minimize": true,
            "noId": false,
            "noVirtualId": false,
            "read": null,
            "shardKey": null,
            "strict": true,
            "typeKey": "type",
            "validateBeforeSave": true,
            "versionKey": "__v",
          },
          "setters": Array [],
          "validators": Array [],
          Symbol(mongoose#schemaType): true,
        },
        "defaultValue": [Function],
        "getters": Array [],
        "instance": "Array",
        "options": Object {
          "type": Array [
            Array [
              [Function],
            ],
          ],
        },
        "path": "coordinates",
        "schemaOptions": undefined,
        "setters": Array [],
        "validators": Array [],
        Symbol(mongoose#schemaType): true,
      },
      "defaultValue": [Function],
      "getters": Array [],
      "instance": "Array",
      "options": Object {
        "type": Array [
          Array [
            Array [
              [Function],
            ],
          ],
        ],
      },
      "path": "coordinates.$",
      "schemaOptions": undefined,
      "setters": Array [],
      "validators": Array [],
      Symbol(mongoose#schemaType): true,
    },
    "coordinates.$.$": SchemaArray {
      "$isMongooseArray": true,
      "_index": null,
      "caster": SchemaArray {
        "$isMongooseArray": true,
        "_index": null,
        "caster": SchemaNumber {
          "_index": null,
          "getters": Array [],
          "instance": "Number",
          "options": Object {},
          "path": "coordinates",
          "setters": Array [],
          "validators": Array [],
          Symbol(mongoose#schemaType): true,
        },
        "casterConstructor": [Function],
        "defaultValue": [Function],
        "getters": Array [],
        "instance": "Array",
        "options": Object {
          "type": Array [
            [Function],
          ],
        },
        "path": "coordinates",
        "schemaOptions": Object {
          "_id": true,
          "autoIndex": null,
          "bufferCommands": true,
          "capped": false,
          "discriminatorKey": "__t",
          "id": true,
          "minimize": true,
          "noId": false,
          "noVirtualId": false,
          "read": null,
          "shardKey": null,
          "strict": true,
          "typeKey": "type",
          "validateBeforeSave": true,
          "versionKey": "__v",
        },
        "setters": Array [],
        "validators": Array [],
        Symbol(mongoose#schemaType): true,
      },
      "casterConstructor": SchemaArray {
        "$isMongooseArray": true,
        "_index": null,
        "caster": SchemaNumber {
          "_index": null,
          "getters": Array [],
          "instance": "Number",
          "options": Object {},
          "path": "coordinates",
          "setters": Array [],
          "validators": Array [],
          Symbol(mongoose#schemaType): true,
        },
        "casterConstructor": [Function],
        "defaultValue": [Function],
        "getters": Array [],
        "instance": "Array",
        "options": Object {
          "type": Array [
            [Function],
          ],
        },
        "path": "coordinates",
        "schemaOptions": Object {
          "_id": true,
          "autoIndex": null,
          "bufferCommands": true,
          "capped": false,
          "discriminatorKey": "__t",
          "id": true,
          "minimize": true,
          "noId": false,
          "noVirtualId": false,
          "read": null,
          "shardKey": null,
          "strict": true,
          "typeKey": "type",
          "validateBeforeSave": true,
          "versionKey": "__v",
        },
        "setters": Array [],
        "validators": Array [],
        Symbol(mongoose#schemaType): true,
      },
      "defaultValue": [Function],
      "getters": Array [],
      "instance": "Array",
      "options": Object {
        "type": Array [
          Array [
            [Function],
          ],
        ],
      },
      "path": "coordinates.$.$",
      "schemaOptions": undefined,
      "setters": Array [],
      "validators": Array [],
      Symbol(mongoose#schemaType): true,
    },
    "coordinates.$.$.$": SchemaArray {
      "$isMongooseArray": true,
      "_index": null,
      "caster": SchemaNumber {
        "_index": null,
        "getters": Array [],
        "instance": "Number",
        "options": Object {},
        "path": "coordinates",
        "setters": Array [],
        "validators": Array [],
        Symbol(mongoose#schemaType): true,
      },
      "casterConstructor": SchemaNumber {
        "_index": null,
        "getters": Array [],
        "instance": "Number",
        "options": Object {},
        "path": "coordinates",
        "setters": Array [],
        "validators": Array [],
        Symbol(mongoose#schemaType): true,
      },
      "defaultValue": [Function],
      "getters": Array [],
      "instance": "Array",
      "options": Object {
        "type": Array [
          [Function],
        ],
      },
      "path": "coordinates.$.$.$",
      "schemaOptions": Object {
        "_id": true,
        "autoIndex": null,
        "bufferCommands": true,
        "capped": false,
        "discriminatorKey": "__t",
        "id": true,
        "minimize": true,
        "noId": false,
        "noVirtualId": false,
        "read": null,
        "shardKey": null,
        "strict": true,
        "typeKey": "type",
        "validateBeforeSave": true,
        "versionKey": "__v",
      },
      "setters": Array [],
      "validators": Array [],
      Symbol(mongoose#schemaType): true,
    },
    "coordinates.$.$.$.$": SchemaNumber {
      "_index": null,
      "getters": Array [],
      "instance": "Number",
      "options": Object {},
      "path": "coordinates.$.$.$.$",
      "requiredValidator": undefined,
      "setters": Array [],
      "validators": Array [],
      Symbol(mongoose#schemaType): true,
    },
  },
  "tree": Object {
    "_id": Object {
      "auto": true,
      "type": [Function],
    },
    "coordinates": Object {
      "required": true,
      "type": Array [
        Array [
          Array [
            Array [
              [Function],
            ],
          ],
        ],
      ],
      "validate": [Function],
    },
    "type": Object {
      "default": "MultiPolygon",
      "enum": Array [
        "MultiPolygon",
      ],
      "required": true,
      "type": [Function],
    },
  },
  "virtuals": Object {},
}
`;

exports[`point works 1`] = `
Schema {
  "$id": 1,
  "_indexes": Array [],
  "_userProvidedOptions": Object {},
  "aliases": Object {},
  "callQueue": Array [],
  "childSchemas": Array [],
  "inherits": Object {},
  "methodOptions": Object {},
  "methods": Object {},
  "nested": Object {},
  "obj": Object {
    "coordinates": Object {
      "required": true,
      "type": Array [
        [Function],
      ],
      "validate": [Function],
    },
    "type": Object {
      "default": "Point",
      "enum": Array [
        "Point",
      ],
      "required": true,
      "type": [Function],
    },
  },
  "options": Object {
    "_id": true,
    "autoIndex": null,
    "bufferCommands": true,
    "capped": false,
    "discriminatorKey": "__t",
    "id": true,
    "minimize": true,
    "noId": false,
    "noVirtualId": false,
    "read": null,
    "shardKey": null,
    "strict": true,
    "typeKey": "type",
    "validateBeforeSave": true,
    "versionKey": "__v",
  },
  "paths": Object {
    "_id": ObjectId {
      "_index": null,
      "defaultValue": [Function],
      "getters": Array [],
      "instance": "ObjectID",
      "options": Object {
        "auto": true,
        "type": [Function],
      },
      "path": "_id",
      "setters": Array [
        [Function],
      ],
      "validators": Array [],
      Symbol(mongoose#schemaType): true,
    },
    "coordinates": SchemaArray {
      "$isMongooseArray": true,
      "_index": null,
      "caster": SchemaNumber {
        "_index": null,
        "getters": Array [],
        "instance": "Number",
        "options": Object {},
        "path": "coordinates",
        "setters": Array [],
        "validators": Array [],
        Symbol(mongoose#schemaType): true,
      },
      "casterConstructor": [Function],
      "defaultValue": [Function],
      "getters": Array [],
      "instance": "Array",
      "isRequired": true,
      "options": Object {
        "required": true,
        "type": Array [
          [Function],
        ],
        "validate": [Function],
      },
      "originalRequiredValue": true,
      "path": "coordinates",
      "requiredValidator": [Function],
      "schemaOptions": Object {
        "_id": true,
        "autoIndex": null,
        "bufferCommands": true,
        "capped": false,
        "discriminatorKey": "__t",
        "id": true,
        "minimize": true,
        "noId": false,
        "noVirtualId": false,
        "read": null,
        "shardKey": null,
        "strict": true,
        "typeKey": "type",
        "validateBeforeSave": true,
        "versionKey": "__v",
      },
      "setters": Array [],
      "validators": Array [
        Object {
          "message": "Path \`{PATH}\` is required.",
          "type": "required",
          "validator": [Function],
        },
        Object {
          "message": "Validator failed for path \`{PATH}\` with value \`{VALUE}\`",
          "type": "user defined",
          "validator": [Function],
        },
      ],
      Symbol(mongoose#schemaType): true,
    },
    "type": SchemaString {
      "_index": null,
      "defaultValue": "Point",
      "enumValidator": [Function],
      "enumValues": Array [
        "Point",
      ],
      "getters": Array [],
      "instance": "String",
      "isRequired": true,
      "options": Object {
        "default": "Point",
        "enum": Array [
          "Point",
        ],
        "required": true,
        "type": [Function],
      },
      "originalRequiredValue": true,
      "path": "type",
      "regExp": null,
      "requiredValidator": [Function],
      "setters": Array [],
      "validators": Array [
        Object {
          "message": "Path \`{PATH}\` is required.",
          "type": "required",
          "validator": [Function],
        },
        Object {
          "enumValues": Array [
            "Point",
          ],
          "message": "\`{VALUE}\` is not a valid enum value for path \`{PATH}\`.",
          "type": "enum",
          "validator": [Function],
        },
      ],
      Symbol(mongoose#schemaType): true,
    },
  },
  "plugins": Array [],
  "query": Object {},
  "s": Object {
    "hooks": Kareem {
      "_posts": Map {},
      "_pres": Map {},
    },
  },
  "singleNestedPaths": Object {},
  "statics": Object {},
  "subpaths": Object {
    "coordinates.$": SchemaNumber {
      "_index": null,
      "getters": Array [],
      "instance": "Number",
      "options": Object {},
      "path": "coordinates.$",
      "requiredValidator": undefined,
      "setters": Array [],
      "validators": Array [],
      Symbol(mongoose#schemaType): true,
    },
  },
  "tree": Object {
    "_id": Object {
      "auto": true,
      "type": [Function],
    },
    "coordinates": Object {
      "required": true,
      "type": Array [
        [Function],
      ],
      "validate": [Function],
    },
    "type": Object {
      "default": "Point",
      "enum": Array [
        "Point",
      ],
      "required": true,
      "type": [Function],
    },
  },
  "virtuals": Object {},
}
`;

exports[`polygon works 1`] = `
Schema {
  "$id": 5,
  "_indexes": Array [],
  "_userProvidedOptions": Object {},
  "aliases": Object {},
  "callQueue": Array [],
  "childSchemas": Array [],
  "inherits": Object {},
  "methodOptions": Object {},
  "methods": Object {},
  "nested": Object {},
  "obj": Object {
    "coordinates": Object {
      "required": true,
      "type": Array [
        Array [
          Array [
            [Function],
          ],
        ],
      ],
      "validate": [Function],
    },
    "type": Object {
      "default": "Polygon",
      "enum": Array [
        "Polygon",
      ],
      "required": true,
      "type": [Function],
    },
  },
  "options": Object {
    "_id": true,
    "autoIndex": null,
    "bufferCommands": true,
    "capped": false,
    "discriminatorKey": "__t",
    "id": true,
    "minimize": true,
    "noId": false,
    "noVirtualId": false,
    "read": null,
    "shardKey": null,
    "strict": true,
    "typeKey": "type",
    "validateBeforeSave": true,
    "versionKey": "__v",
  },
  "paths": Object {
    "_id": ObjectId {
      "_index": null,
      "defaultValue": [Function],
      "getters": Array [],
      "instance": "ObjectID",
      "options": Object {
        "auto": true,
        "type": [Function],
      },
      "path": "_id",
      "setters": Array [
        [Function],
      ],
      "validators": Array [],
      Symbol(mongoose#schemaType): true,
    },
    "coordinates": SchemaArray {
      "$isMongooseArray": true,
      "_index": null,
      "caster": SchemaArray {
        "$isMongooseArray": true,
        "_index": null,
        "caster": SchemaArray {
          "$isMongooseArray": true,
          "_index": null,
          "caster": SchemaNumber {
            "_index": null,
            "getters": Array [],
            "instance": "Number",
            "options": Object {},
            "path": "coordinates",
            "setters": Array [],
            "validators": Array [],
            Symbol(mongoose#schemaType): true,
          },
          "casterConstructor": [Function],
          "defaultValue": [Function],
          "getters": Array [],
          "instance": "Array",
          "options": Object {
            "type": Array [
              [Function],
            ],
          },
          "path": "coordinates",
          "schemaOptions": Object {
            "_id": true,
            "autoIndex": null,
            "bufferCommands": true,
            "capped": false,
            "discriminatorKey": "__t",
            "id": true,
            "minimize": true,
            "noId": false,
            "noVirtualId": false,
            "read": null,
            "shardKey": null,
            "strict": true,
            "typeKey": "type",
            "validateBeforeSave": true,
            "versionKey": "__v",
          },
          "setters": Array [],
          "validators": Array [],
          Symbol(mongoose#schemaType): true,
        },
        "casterConstructor": SchemaArray {
          "$isMongooseArray": true,
          "_index": null,
          "caster": SchemaNumber {
            "_index": null,
            "getters": Array [],
            "instance": "Number",
            "options": Object {},
            "path": "coordinates",
            "setters": Array [],
            "validators": Array [],
            Symbol(mongoose#schemaType): true,
          },
          "casterConstructor": [Function],
          "defaultValue": [Function],
          "getters": Array [],
          "instance": "Array",
          "options": Object {
            "type": Array [
              [Function],
            ],
          },
          "path": "coordinates",
          "schemaOptions": Object {
            "_id": true,
            "autoIndex": null,
            "bufferCommands": true,
            "capped": false,
            "discriminatorKey": "__t",
            "id": true,
            "minimize": true,
            "noId": false,
            "noVirtualId": false,
            "read": null,
            "shardKey": null,
            "strict": true,
            "typeKey": "type",
            "validateBeforeSave": true,
            "versionKey": "__v",
          },
          "setters": Array [],
          "validators": Array [],
          Symbol(mongoose#schemaType): true,
        },
        "defaultValue": [Function],
        "getters": Array [],
        "instance": "Array",
        "options": Object {
          "type": Array [
            Array [
              [Function],
            ],
          ],
        },
        "path": "coordinates",
        "schemaOptions": undefined,
        "setters": Array [],
        "validators": Array [],
        Symbol(mongoose#schemaType): true,
      },
      "casterConstructor": SchemaArray {
        "$isMongooseArray": true,
        "_index": null,
        "caster": SchemaArray {
          "$isMongooseArray": true,
          "_index": null,
          "caster": SchemaNumber {
            "_index": null,
            "getters": Array [],
            "instance": "Number",
            "options": Object {},
            "path": "coordinates",
            "setters": Array [],
            "validators": Array [],
            Symbol(mongoose#schemaType): true,
          },
          "casterConstructor": [Function],
          "defaultValue": [Function],
          "getters": Array [],
          "instance": "Array",
          "options": Object {
            "type": Array [
              [Function],
            ],
          },
          "path": "coordinates",
          "schemaOptions": Object {
            "_id": true,
            "autoIndex": null,
            "bufferCommands": true,
            "capped": false,
            "discriminatorKey": "__t",
            "id": true,
            "minimize": true,
            "noId": false,
            "noVirtualId": false,
            "read": null,
            "shardKey": null,
            "strict": true,
            "typeKey": "type",
            "validateBeforeSave": true,
            "versionKey": "__v",
          },
          "setters": Array [],
          "validators": Array [],
          Symbol(mongoose#schemaType): true,
        },
        "casterConstructor": SchemaArray {
          "$isMongooseArray": true,
          "_index": null,
          "caster": SchemaNumber {
            "_index": null,
            "getters": Array [],
            "instance": "Number",
            "options": Object {},
            "path": "coordinates",
            "setters": Array [],
            "validators": Array [],
            Symbol(mongoose#schemaType): true,
          },
          "casterConstructor": [Function],
          "defaultValue": [Function],
          "getters": Array [],
          "instance": "Array",
          "options": Object {
            "type": Array [
              [Function],
            ],
          },
          "path": "coordinates",
          "schemaOptions": Object {
            "_id": true,
            "autoIndex": null,
            "bufferCommands": true,
            "capped": false,
            "discriminatorKey": "__t",
            "id": true,
            "minimize": true,
            "noId": false,
            "noVirtualId": false,
            "read": null,
            "shardKey": null,
            "strict": true,
            "typeKey": "type",
            "validateBeforeSave": true,
            "versionKey": "__v",
          },
          "setters": Array [],
          "validators": Array [],
          Symbol(mongoose#schemaType): true,
        },
        "defaultValue": [Function],
        "getters": Array [],
        "instance": "Array",
        "options": Object {
          "type": Array [
            Array [
              [Function],
            ],
          ],
        },
        "path": "coordinates",
        "schemaOptions": undefined,
        "setters": Array [],
        "validators": Array [],
        Symbol(mongoose#schemaType): true,
      },
      "defaultValue": [Function],
      "getters": Array [],
      "instance": "Array",
      "isRequired": true,
      "options": Object {
        "required": true,
        "type": Array [
          Array [
            Array [
              [Function],
            ],
          ],
        ],
        "validate": [Function],
      },
      "originalRequiredValue": true,
      "path": "coordinates",
      "requiredValidator": [Function],
      "schemaOptions": undefined,
      "setters": Array [],
      "validators": Array [
        Object {
          "message": "Path \`{PATH}\` is required.",
          "type": "required",
          "validator": [Function],
        },
        Object {
          "message": "Validator failed for path \`{PATH}\` with value \`{VALUE}\`",
          "type": "user defined",
          "validator": [Function],
        },
      ],
      Symbol(mongoose#schemaType): true,
    },
    "type": SchemaString {
      "_index": null,
      "defaultValue": "Polygon",
      "enumValidator": [Function],
      "enumValues": Array [
        "Polygon",
      ],
      "getters": Array [],
      "instance": "String",
      "isRequired": true,
      "options": Object {
        "default": "Polygon",
        "enum": Array [
          "Polygon",
        ],
        "required": true,
        "type": [Function],
      },
      "originalRequiredValue": true,
      "path": "type",
      "regExp": null,
      "requiredValidator": [Function],
      "setters": Array [],
      "validators": Array [
        Object {
          "message": "Path \`{PATH}\` is required.",
          "type": "required",
          "validator": [Function],
        },
        Object {
          "enumValues": Array [
            "Polygon",
          ],
          "message": "\`{VALUE}\` is not a valid enum value for path \`{PATH}\`.",
          "type": "enum",
          "validator": [Function],
        },
      ],
      Symbol(mongoose#schemaType): true,
    },
  },
  "plugins": Array [],
  "query": Object {},
  "s": Object {
    "hooks": Kareem {
      "_posts": Map {},
      "_pres": Map {},
    },
  },
  "singleNestedPaths": Object {},
  "statics": Object {},
  "subpaths": Object {
    "coordinates.$": SchemaArray {
      "$isMongooseArray": true,
      "_index": null,
      "caster": SchemaArray {
        "$isMongooseArray": true,
        "_index": null,
        "caster": SchemaNumber {
          "_index": null,
          "getters": Array [],
          "instance": "Number",
          "options": Object {},
          "path": "coordinates",
          "setters": Array [],
          "validators": Array [],
          Symbol(mongoose#schemaType): true,
        },
        "casterConstructor": [Function],
        "defaultValue": [Function],
        "getters": Array [],
        "instance": "Array",
        "options": Object {
          "type": Array [
            [Function],
          ],
        },
        "path": "coordinates",
        "schemaOptions": Object {
          "_id": true,
          "autoIndex": null,
          "bufferCommands": true,
          "capped": false,
          "discriminatorKey": "__t",
          "id": true,
          "minimize": true,
          "noId": false,
          "noVirtualId": false,
          "read": null,
          "shardKey": null,
          "strict": true,
          "typeKey": "type",
          "validateBeforeSave": true,
          "versionKey": "__v",
        },
        "setters": Array [],
        "validators": Array [],
        Symbol(mongoose#schemaType): true,
      },
      "casterConstructor": SchemaArray {
        "$isMongooseArray": true,
        "_index": null,
        "caster": SchemaNumber {
          "_index": null,
          "getters": Array [],
          "instance": "Number",
          "options": Object {},
          "path": "coordinates",
          "setters": Array [],
          "validators": Array [],
          Symbol(mongoose#schemaType): true,
        },
        "casterConstructor": [Function],
        "defaultValue": [Function],
        "getters": Array [],
        "instance": "Array",
        "options": Object {
          "type": Array [
            [Function],
          ],
        },
        "path": "coordinates",
        "schemaOptions": Object {
          "_id": true,
          "autoIndex": null,
          "bufferCommands": true,
          "capped": false,
          "discriminatorKey": "__t",
          "id": true,
          "minimize": true,
          "noId": false,
          "noVirtualId": false,
          "read": null,
          "shardKey": null,
          "strict": true,
          "typeKey": "type",
          "validateBeforeSave": true,
          "versionKey": "__v",
        },
        "setters": Array [],
        "validators": Array [],
        Symbol(mongoose#schemaType): true,
      },
      "defaultValue": [Function],
      "getters": Array [],
      "instance": "Array",
      "options": Object {
        "type": Array [
          Array [
            [Function],
          ],
        ],
      },
      "path": "coordinates.$",
      "schemaOptions": undefined,
      "setters": Array [],
      "validators": Array [],
      Symbol(mongoose#schemaType): true,
    },
    "coordinates.$.$": SchemaArray {
      "$isMongooseArray": true,
      "_index": null,
      "caster": SchemaNumber {
        "_index": null,
        "getters": Array [],
        "instance": "Number",
        "options": Object {},
        "path": "coordinates",
        "setters": Array [],
        "validators": Array [],
        Symbol(mongoose#schemaType): true,
      },
      "casterConstructor": SchemaNumber {
        "_index": null,
        "getters": Array [],
        "instance": "Number",
        "options": Object {},
        "path": "coordinates",
        "setters": Array [],
        "validators": Array [],
        Symbol(mongoose#schemaType): true,
      },
      "defaultValue": [Function],
      "getters": Array [],
      "instance": "Array",
      "options": Object {
        "type": Array [
          [Function],
        ],
      },
      "path": "coordinates.$.$",
      "schemaOptions": Object {
        "_id": true,
        "autoIndex": null,
        "bufferCommands": true,
        "capped": false,
        "discriminatorKey": "__t",
        "id": true,
        "minimize": true,
        "noId": false,
        "noVirtualId": false,
        "read": null,
        "shardKey": null,
        "strict": true,
        "typeKey": "type",
        "validateBeforeSave": true,
        "versionKey": "__v",
      },
      "setters": Array [],
      "validators": Array [],
      Symbol(mongoose#schemaType): true,
    },
    "coordinates.$.$.$": SchemaNumber {
      "_index": null,
      "getters": Array [],
      "instance": "Number",
      "options": Object {},
      "path": "coordinates.$.$.$",
      "requiredValidator": undefined,
      "setters": Array [],
      "validators": Array [],
      Symbol(mongoose#schemaType): true,
    },
  },
  "tree": Object {
    "_id": Object {
      "auto": true,
      "type": [Function],
    },
    "coordinates": Object {
      "required": true,
      "type": Array [
        Array [
          Array [
            [Function],
          ],
        ],
      ],
      "validate": [Function],
    },
    "type": Object {
      "default": "Polygon",
      "enum": Array [
        "Polygon",
      ],
      "required": true,
      "type": [Function],
    },
  },
  "virtuals": Object {},
}
`;
